k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portafolio
  namespace: portafolio
spec:
  selector:
    app: portafolio
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
